<resources>
    <string name="app_name">电子巡检系统</string>
    <string name="long_name">电子巡检系统</string>
    <string name="title_activity_main">任务列表</string>
    <string name="title_activity_upload">上传</string>
    <string name="hello_world">Hello world!</string>
    <string name="MyApp_networkAdvice">您的网络出错或信号太差，建议使用WIFI网络或者联通、电信的3G网络！</string>
    <string name="MyApp_inputKey">请输入正确的授权Key！</string>
    <string name="MyApp_initializationError">BMapManager  初始化错误！</string>
    <string name="loading_dialog_message_string">正在为您上传数据……</string>
    <string name="upload_add_ablum_header_button_back">返回</string>
    <string name="upload_add_ablum_header_button_cancel">取消</string>
    <string name="upload_add_ablum_bottom_button_selectall">全选</string>
    <string name="upload_addablum_btn_finish">完成</string>
    <string name="LoginActivity_notuser">用户不存在！</string>
    <string name="LoginActivity_invaliduser">该用户已停止使用！</string>
    <string name="LoginActivity_loginfail">用户信息错误，登陆失败！</string>
    <string name="LoginActivity_notnull">密码或账号不能为空！</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="confirm_password">请确认新密码</string>
    <string name="label_account">帐号:</string>
    <string name="label_psw">密码:</string>
    <string name="remeberpwd">记住密码</string>
    <string name="autologin">自动登陆</string>
    <string name="btn_signing">登录</string>
    <string name="ac_name_home">列表</string>
    <string name="ac_name_msg">消息</string>
    <string name="ac_name_studty">学习</string>
    <string name="ac_name_more">资料</string>
    <string name="crash_notif_ticker_text">现场影像云平台产生意外错误, 请发送一个错误报告&#8230;</string>
    <string name="crash_notif_title">现场影像云平台发生意外错误&#8230;</string>
    <string name="crash_notif_text">请单击这里帮助我们修复这个问题</string>
    <string name="crash_dialog_title">现场影像云平台错误报告</string>
    <string name="crash_dialog_text">意外错误导致程序停止，我们需要您的反馈来帮助我们尽快修复这个问题，请放心，我们只采集出错信息，不收集您的个人信息</string>
    <string name="crash_toast_text">应用遭遇异常，即将退出</string>
    <string name="crash_yes">告诉我们</string>
    <string name="crash_no">取消操作</string>
    <string name="crash_subject">错误</string>
    <string name="tab_home">主页</string>
    <string name="details">资料</string>
    <string name="patrol">巡查</string>
    <string name="inspection">巡检</string>
    <string name="study">学习</string>
    <string name="study_title">学习</string>
    <string name="message">消息</string>
    <string name="upload_locationmsg_loading">正在获取您的地理信息……</string>
    <string name="app_label">指南针</string>
    <string name="getting_location">正在获取经纬度...</string>
    <string name="cannot_get_location">无法获取经纬度</string>
    <string name="location_north">北纬 %s</string>
    <string name="location_south">南纬 %sS</string>
    <string name="location_east">东经 %s</string>
    <string name="location_west">西经 %s</string>
    <string name="lv_refresh_head_load_more">加载更多</string>
    <string name="lv_refresh_end_load_more">更    多</string>
    <string name="lv_refresh_end_click_load_more">点击加载</string>
    <string name="lv_refresh_release_refresh">松开刷新</string>
    <string name="lv_refresh_pull_to_refresh">下拉刷新</string>
    <string name="lv_refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="lv_refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="lv_refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <!-- 关于 -->
    <string name="copyright">Copyright © 2014 GPDI. All Right Reserved.</string>
    <string name="copyright_cn">广东省电信规划设计院有限公司  版权所有</string>
    <!-- 个人资料变量 -->

    <string name="info_name">姓名</string>
    <string name="info_account">账号</string>
    <string name="info_sex">性别</string>
    <string name="info_company">公司</string>
    <string name="info_department">部门</string>
    <string name="info_contract">电话</string>
    <string name="info_createtime">状态</string>

    <string-array name="menu_1">
        <item>检查更新</item>
        <item>关于</item>
        <item>注销</item>
        <item>退出应用</item>
    </string-array>
    <string-array name="menu_2">
        <item>检查更新</item>
        <item>关于</item>
        <item>取消</item>
    </string-array>
    <string-array name="isException">
        <item>异常</item>
        <item>正常</item>
    </string-array>
    <string-array name="isWarn">
        <item>绿灯</item>
        <item>黄灯</item>
        <item>红灯</item>
    </string-array>
</resources>
