<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/main_top_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="8dip"
    android:paddingRight="8dip">

    <LinearLayout
        android:id="@+id/account_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#d8d8d8"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1px"
            android:background="@color/white">

            <com.bankicp.library.EditText.ClearEditText
                android:id="@+id/et_pwd"
                style="@style/login_input"
                android:hint="@string/input_password"
                android:inputType="textEmailAddress"
                android:maxLength="50" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1px"
            android:background="@color/white">

            <com.bankicp.library.EditText.ClearEditText
                android:id="@+id/et_pwd_new"
                style="@style/login_input"
                android:hint="@string/input_new_password"
                android:inputType="textPassword"
                android:maxLength="50" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1px"
            android:layout_marginTop="1px"
            android:background="@color/white">

            <com.bankicp.library.EditText.ClearEditText
                android:id="@+id/et_pwd_new_c"
                style="@style/login_input"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="50" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>