<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_left_menu"
    android:layout_width="68dip"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main_tab_home"
        style="@style/main_left_tab_style"
        android:onClick="onMainTab">

        <ImageView
            android:id="@+id/home_icon"
            style="@style/main_left_tab_iv_style"
            android:layout_centerInParent="true"
            android:src="@mipmap/home_btn_n" />

        <TextView
            android:id="@+id/home_tx"
            style="@style/main_left_tab_tv_style"
            android:layout_below="@id/home_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/tab_home" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_tab_patrol"
        style="@style/main_left_tab_style"
        android:onClick="onMainTab">

        <ImageView
            android:id="@+id/patrol_icon"
            style="@style/main_left_tab_iv_style"
            android:layout_centerInParent="true"
            android:src="@mipmap/home_btn_n" />

        <TextView
            android:id="@+id/patrol_tx"
            style="@style/main_left_tab_tv_style"
            android:layout_below="@id/patrol_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/patrol" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_tab_inspection"
        style="@style/main_left_tab_style"
        android:onClick="onMainTab">

        <ImageView
            android:id="@+id/inspection_icon"
            style="@style/main_left_tab_iv_style"
            android:layout_centerInParent="true"
            android:src="@mipmap/home_btn_n" />

        <TextView
            android:id="@+id/inspection_tx"
            style="@style/main_left_tab_tv_style"
            android:layout_below="@id/inspection_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/inspection" />
    </RelativeLayout>

</LinearLayout>