<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/login_bg"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/login_lly"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/login_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:orientation="vertical">

            <ImageView
                android:layout_width="65dip"
                android:layout_height="65dip"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icon" />

            <TextView
                android:id="@+id/login_account_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/list_item_map_text"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_input"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#d8d8d8"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1px"
                android:background="@color/white">

                <com.bankicp.library.EditText.ClearEditText
                    android:id="@+id/gdtec_account"
                    style="@style/login_input"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:hint="@string/input_account"
                    android:inputType="textEmailAddress"
                    android:maxLength="50" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="240dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1px"
                android:layout_marginTop="1px"
                android:background="@color/white">

                <com.bankicp.library.EditText.ClearEditText
                    android:id="@+id/et_pwd"
                    style="@style/login_input"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="fill_parent"
                android:layout_height="40.0dp"
                android:layout_marginBottom="5.0dp"
                android:layout_marginTop="8.0dp"
                android:background="@drawable/wb_btn_deep_selector"
                android:text="@string/btn_signing"
                android:textColor="@color/white"
                android:textSize="18.0sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>